@@ -7,7 +7,6 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.function.ThrowingRunnable;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -48,6 +47,7 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentResponse;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentServiceResponse;
+import uk.gov.hmcts.reform.prl.services.DocumentCategoryService;
 import uk.gov.hmcts.reform.prl.services.RoleAssignmentService;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
 import uk.gov.hmcts.reform.prl.services.UserService;
@@ -99,8 +99,6 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_RESPO
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_RESPONDENT_APPLICATION_CATEGORY_ID;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlLaunchDarklyFlagConstants.ROLE_ASSIGNMENT_API_IN_ORDERS_JOURNEY;
-import static uk.gov.hmcts.reform.prl.enums.Roles.LOCAL_AUTHORITY_SOLICITOR;
-import static uk.gov.hmcts.reform.prl.enums.Roles.LOCAL_AUTHORITY_STAFF;
 import static uk.gov.hmcts.reform.prl.enums.managedocuments.DocumentPartyEnum.LOCAL_AUTHORITY;
 import static uk.gov.hmcts.reform.prl.services.managedocuments.ManageDocumentsService.MANAGE_DOCUMENTS_RESTRICTED_FLAG;
 import static uk.gov.hmcts.reform.prl.services.managedocuments.ManageDocumentsService.MANAGE_DOCUMENTS_TRIGGERED_BY;
@@ -163,6 +161,9 @@ public class ManageDocumentsServiceTest {
 
     @Mock
     private StartAllTabsUpdateDataContent startAllTabsUpdateDataContent;
+
+    @Mock
+    private DocumentCategoryService documentCategoryService;
 
     private final String auth = "auth-token";
 
@@ -363,52 +364,67 @@ public class ManageDocumentsServiceTest {
 
     @Test
     public void testPopulateDocumentCategories() {
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), anyString())).thenReturn(false);
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            any(),
-            any(),
-            any()
-        )).thenReturn(categoriesAndDocuments);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+        // given
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(true);
+        DynamicListElement dynamicListElement = DynamicListElement.builder()
+            .code(category.getCategoryId())
+            .label(category.getCategoryName())
+            .build();
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        dynamicListElementList.add(dynamicListElement);
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            true
+        )).thenReturn(dynamicList);
 
-        CaseData caseData = CaseData.builder().build();
-
+        // when
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+
+
+        // then
         String docCode = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
-            .get(0).getCode();
-        assertEquals(subCategory2.getCategoryId(), docCode);
+            .getManageDocuments().getFirst().getValue().getDocumentCategories().getListItems()
+            .getFirst().getCode();
+        assertEquals(category.getCategoryId(), docCode);
 
     }
 
     @Test
     public void testPopulateDocumentCategoriesForLaParty() {
 
+        // given
         Category laCategory = new Category("localAuthorityDocuments", "localAuthorityDocuments",
                                            2, List.of(document), List.of(subCategory1, subCategory2));
-        CategoriesAndDocuments laCategoriesAndDocuments = new CategoriesAndDocuments(1, List.of(laCategory), List.of(document));
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(true);
+        DynamicListElement dynamicListElement = DynamicListElement.builder()
+            .code(laCategory.getCategoryId())
+            .label(laCategory.getCategoryName())
+            .build();
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        dynamicListElementList.add(dynamicListElement);
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            true
+        )).thenReturn(dynamicList);
 
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), anyString())).thenReturn(true);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            any(),
-            any(),
-            any()
-        )).thenReturn(laCategoriesAndDocuments);
-
-
-        CaseData caseData = CaseData.builder().build();
-
+        // when
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+
+        // then
         String docCode = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
-            .get(0).getCode();
+            .getManageDocuments().getFirst().getValue().getDocumentCategories().getListItems()
+            .getFirst().getCode();
         DocumentPartyEnum laParty = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentParty();
-        assertEquals(subCategory2.getCategoryId(), docCode);
+            .getManageDocuments().getFirst().getValue().getDocumentParty();
+        assertEquals(laCategory.getCategoryId(), docCode);
         assertEquals(LOCAL_AUTHORITY, laParty);
     }
 
@@ -417,28 +433,33 @@ public class ManageDocumentsServiceTest {
 
         Category laCategory = new Category("localAuthorityDocuments", "localAuthorityDocuments", 2,
                                            List.of(document), List.of(subCategory1, subCategory2));
-        CategoriesAndDocuments laCategoriesAndDocuments = new CategoriesAndDocuments(1, List.of(laCategory), List.of(document));
 
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), eq(LOCAL_AUTHORITY_STAFF.getValue()))).thenReturn(true);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(true);
+        DynamicListElement dynamicListElement = DynamicListElement.builder()
+            .code(laCategory.getCategoryId())
+            .label(laCategory.getCategoryName())
+            .build();
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        dynamicListElementList.add(dynamicListElement);
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            true
+        )).thenReturn(dynamicList);
 
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            any(),
-            any(),
-            any()
-        )).thenReturn(laCategoriesAndDocuments);
-
-
-        CaseData caseData = CaseData.builder().build();
-
+        // when
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+
+        // then
         String docCode = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
-            .get(0).getCode();
+            .getManageDocuments().getFirst().getValue().getDocumentCategories().getListItems()
+            .getFirst().getCode();
         DocumentPartyEnum laParty = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentParty();
-        assertEquals(subCategory2.getCategoryId(), docCode);
+            .getManageDocuments().getFirst().getValue().getDocumentParty();
+        assertEquals(laCategory.getCategoryId(), docCode);
         assertEquals(LOCAL_AUTHORITY, laParty);
     }
 
@@ -447,99 +468,91 @@ public class ManageDocumentsServiceTest {
 
         Category laCategory = new Category("localAuthorityDocuments", "localAuthorityDocuments", 2,
                                            List.of(document), List.of(subCategory1, subCategory2));
-        CategoriesAndDocuments laCategoriesAndDocuments = new CategoriesAndDocuments(1, List.of(laCategory), List.of(document));
-
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), eq(LOCAL_AUTHORITY_SOLICITOR.getValue()))).thenReturn(true);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            any(),
-            any(),
-            any()
-        )).thenReturn(laCategoriesAndDocuments);
-
-
-        CaseData caseData = CaseData.builder().build();
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(true);
+        DynamicListElement dynamicListElement = DynamicListElement.builder()
+            .code(laCategory.getCategoryId())
+            .label(laCategory.getCategoryName())
+            .build();
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        dynamicListElementList.add(dynamicListElement);
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            true
+        )).thenReturn(dynamicList);
 
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+
+
         String docCode = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
-            .get(0).getCode();
+            .getManageDocuments().getFirst().getValue().getDocumentCategories().getListItems()
+            .getFirst().getCode();
         DocumentPartyEnum laParty = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentParty();
-        assertEquals(subCategory2.getCategoryId(), docCode);
+            .getManageDocuments().getFirst().getValue().getDocumentParty();
+        assertEquals(laCategory.getCategoryId(), docCode);
         assertEquals(LOCAL_AUTHORITY, laParty);
     }
 
 
     @Test
     public void testDefaultDocumentPartyForNonLaParty() {
+        // given
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(false);
+        DynamicListElement dynamicListElement = DynamicListElement.builder()
+            .code(category.getCategoryId())
+            .label(category.getCategoryName())
+            .build();
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        dynamicListElementList.add(dynamicListElement);
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            false
+        )).thenReturn(dynamicList);
 
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), anyString())).thenReturn(false);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            any(),
-            any(),
-            any()
-        )).thenReturn(categoriesAndDocuments);
-
-
-        CaseData caseData = CaseData.builder().build();
-
+        // when
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
+
+        // then
         String docCode = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentCategories().getListItems()
-            .get(0).getCode();
+            .getManageDocuments().getFirst().getValue().getDocumentCategories().getListItems()
+            .getFirst().getCode();
         DocumentPartyEnum laParty = updatedCaseData.getDocumentManagementDetails()
-            .getManageDocuments().get(0).getValue().getDocumentParty();
-        assertEquals(subCategory2.getCategoryId(), docCode);
+            .getManageDocuments().getFirst().getValue().getDocumentParty();
+        assertEquals(category.getCategoryId(), docCode);
         assertNull(laParty);
     }
 
     @Test
     public void testPopulateDocumentCategoriesExcludeCategory() {
-        when(authTokenGenerator.generate()).thenReturn(serviceAuthToken);
+        // given
+        CaseData caseData = CaseData.builder().id(12345L).build();
+        when(documentCategoryService.isUserAllocatedRoleForCaseLA(auth, caseData)).thenReturn(true);
+        List<DynamicListElement> dynamicListElementList = new ArrayList<>();
+        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.EMPTY)
+            .listItems(dynamicListElementList).build();
+        when(documentCategoryService.getCategoriesSubcategories(
+            auth,
+            String.valueOf(caseData.getId()),
+            true
+        )).thenReturn(dynamicList);
 
-        Document document = new Document("documentURL", "fileName", "binaryUrl", "attributePath", LocalDateTime.now());
-
-        Category confidentialCate = new Category("confidential", "confidentialName", 1, List.of(document), null);
-
-        Category category = new Category("categoryId", "categoryName", 2, List.of(document), List.of(confidentialCate));
-
-        CategoriesAndDocuments categoriesAndDocuments = new CategoriesAndDocuments(1, List.of(category), List.of(document));
-
-        when(coreCaseDataApi.getCategoriesAndDocuments(
-            Mockito.any(),
-            Mockito.any(),
-            Mockito.any()
-        )).thenReturn(categoriesAndDocuments);
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), anyString())).thenReturn(true);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        CaseData caseData = CaseData.builder().build();
-
+        // when
         CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
-        List categoryList = updatedCaseData.getDocumentManagementDetails().getManageDocuments().get(0)
+
+        // then
+        List<DynamicListElement> categoryList = updatedCaseData.getDocumentManagementDetails().getManageDocuments().getFirst()
             .getValue().getDocumentCategories().getListItems();
         assertEquals(0, categoryList.size());
     }
 
-    @Test
-    @DisplayName("test case for populateDocumentCategories Exception.")
-    public void testPopulateDocumentCategoriesException() {
-        when(roleAssignmentService.isUserAllocatedRoleForCase(anyString(), anyString(), anyString())).thenReturn(true);
-        when(authTokenGenerator.generate()).thenThrow(new RuntimeException());
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
 
-        CaseData caseData = CaseData.builder().build();
-        CaseData updatedCaseData = manageDocumentsService.populateDocumentCategories(auth, caseData);
-        List<DynamicListElement> listItems = updatedCaseData.getDocumentManagementDetails().getManageDocuments()
-            .get(0).getValue().getDocumentCategories().getListItems();
-        assertNull(listItems);
-    }
 
     @Test
     public void testCopyDocumentIfRestrictedWithSoliRole() {
